styles/custom.css
/* ... */
/* Remove padding left/right of class notion-page */
.notion-page {
    padding-left: 0 !important;
    padding-right: 0 !important;
}

@media only screen and (max-width: 720px) {
    .notion-page {
        padding-left: 4vw !important;
        padding-right: 4vw !important;
    }
}


.notion-block-1f5398ad1630438d9340b4635175e3f7 {
    flex-direction: row;
}

/* Hide properties bottom line */
.notion-collection-row {
    border-bottom: 1px solid #7777774d;
    margin-bottom: initial;
}

.notion-collection-row-property:has(.notion-property-url:empty) {
    display: none;
}

.notion-collection-row-property:has(.notion-property-text:empty) {
    display: none;
}

.notion-collection-row-property:has(.notion-property-formula:empty) {
    display: none;
}

/* Display full image */
.notion-asset-wrapper-image.notion-asset-wrapper-full > div {
    height: initial !important;
    z-index: 1;
    box-shadow: #ffffff 0px 24px 16px, #ffffff 0px -24px 16px;
}

.dark-mode .notion-asset-wrapper-image.notion-asset-wrapper-full > div {
    height: initial !important;
    z-index: 1;
    box-shadow: #2f3437 0px 24px 16px, #2f3437 0px -24px 16px;
}

/* Force Aside under full image block */
.notion-aside {
    z-index: 0;
    align-items: end;
    padding: 0 32px;
}

.notion-aside-table-of-contents-header {
    display: none;
}

/* Footer */
.light-mode .styles_footer__RBpyk {
    color: #37352f80;
}

.styles_copyright__nhL_k {
    margin: auto;
}

.dark-mode .styles_footer__RBpyk {
    color: #ffffff40;
}

@media only screen and (max-width: 500px) {
    .styles_footer__RBpyk {
        flex-direction: row-reverse !important;
    }
}

/* LINK */

.light-mode a.notion-link {
    border-color: var(--link-underline-on-light) !important;
}

.dark-mode a.notion-link {
    border-color: var(--link-underline-on-dark) !important;
}

.notion-link:focus:not(:has(.notion-page-title-text)),
.notion-link:hover:not(:has(.notion-page-title-text)) {
  border-bottom-color: transparent !important;

  background-image: linear-gradient(90.68deg, #1fffa8 0.26%, #00AEE3 102.37%);
  background-repeat: no-repeat;
  background-position: 0 100%;
  background-size: 100% 0.15em;

  transition-property: background-size;
  transition-duration: 300ms;
}
/* End of LINK */

/* MENTIONED PAGES */
.notion-page-icon-inline {
    display: flex;
    justify-content: center;
    margin: 0 2px 0 0 !important;
}

.notion-page-icon-inline svg {
    width: 80%;
}

.notion-text.notion-default .notion-link:has(.notion-page-title), .notion-link:has(.notion-page-title) {
    border-bottom: none;
    top: initial !important;
}

.notion-text .notion-link:has(.notion-page-title) {
    top: 3px !important;
}

.notion-text .notion-link:has(.notion-page-icon-span) {
    top: -1px !important;
}

.light-mode .notion-page-title-text {
    border-bottom-color: var(--link-underline-on-light) !important;
}

.dark-mode .notion-page-title-text {
    border-bottom-color: var(--link-underline-on-dark) !important;
}

.notion-link .notion-page-title-text {
    border-bottom: solid;
    position: relative;
    transition: unset;
    opacity: 1;
    border-bottom-width: 0.07rem !important;
    background: transparent;
    background-origin: border-box;
    background-repeat: no-repeat;
    background-position: 50% 100%;
    background-size: 0 0.1rem;
}

.notion-link:focus .notion-page-title-text,
.notion-link:hover .notion-page-title-text {
  border-bottom-color: transparent !important;

  background-image: linear-gradient(90.68deg, #1fffa8 0.26%, #00AEE3 102.37%);
  background-repeat: no-repeat;
  background-position: 0 100%;
  background-size: 100% 0.15em;
  transition-property: background-size;
  transition-duration: 300ms;
}

/* Exclude pages in list view */
.notion-list-collection .notion-page-title-text {
    border-bottom: none;
}
/* End of MENTIONED PAGES */

/* MENU */
/* Block id: notion-block-8063463eba084138a52fd42586cd57fa */
.notion-block-8063463eba084138a52fd42586cd57fa .notion-link {
    border-bottom: none;
}

.notion-block-8063463eba084138a52fd42586cd57fa {
    justify-content: space-between;
    background: #f7f7f7;
    border-radius: 3px;
    padding: 0px 16px;
}

.dark-mode .notion-block-8063463eba084138a52fd42586cd57fa {
    background: #f7f7f71a;
}

.notion-block-8063463eba084138a52fd42586cd57fa > div > div {
    height: 28px;
    margin: auto !important;
}
.notion-block-8063463eba084138a52fd42586cd57fa div:nth-child(even) {
    display: none;
}
.notion-block-8063463eba084138a52fd42586cd57fa div:nth-child(odd) {
    width: auto !important;
}
.notion-sync-block .notion-default {
    height: 24px;
}

/* CV */
.notion-block-d46ec141fb0841f3846c319c4403fb7f {
    display: flex;
}

.notion-block-d46ec141fb0841f3846c319c4403fb7f .notion-link {
    display: flex;
}

/* Collection */

/* Hide item that don't has cover image */
.notion-collection-card:has(.notion-collection-card-cover:empty) {
    display: none;
}

.notion-collection {
    width: 100%;
}

/* Disable double hover on item */
.notion-list-item.notion-page-link .notion-page-link:hover {
    background-color: transparent;
}

/* Collection small font-size */
.notion-gallery-grid.notion-gallery-grid-size-small .notion-page-title-text {
    font-size: 1.7em;
}

div:has(+ .notion-block-6644e53486974cc99c7011fd0b1680a6) {
    width: 100%;
}

.notion-collection-view-tabs-row {
    overflow: auto;
    flex-wrap: nowrap;
}

/* Hide collection tabs scroll bar */
.notion-collection-view-tabs-row::-webkit-scrollbar {
    display: none;
}

.notion-collection-card-cover {
    border-radius: var(--border-radius-xl);
    height: initial !important;
    box-shadow:  0px 20px 24px -8px rgba(15, 15, 15, 0.1);
    border-bottom: none;
}

.dark-mode .notion-collection-view-type-icon {
    fill: var(--fg-color);
}

.notion-gallery-grid, .notion-list-body {
    border-top: 1px solid #7777774d;
}


.notion-list-body {
    gap: 2px;
}
/* ... */

